<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainDashboard.MainDashboard"
    android:background="@color/appGreen">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerConstraint"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/school_logo"
            app:layout_constraintBottom_toBottomOf="@id/headerConstraint"
            app:layout_constraintEnd_toEndOf="@id/headerConstraint"
            app:layout_constraintTop_toTopOf="@id/headerConstraint" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"

                android:textSize="20sp"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/headerStudentID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"

                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/currentSchedule"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toBottomOf="@id/headerConstraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            app:cardCornerRadius="20dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/higlightPink"
                    android:text="@string/next_classHeading"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/buttonYellow"
                    android:text="@string/next_classBody"
                    android:textSize="18sp"
                    android:textAlignment="textStart"
                    android:gravity="center_vertical"
                    android:paddingLeft="30dp"
                    android:textStyle="bold"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/currentSchedule">

        <androidx.cardview.widget.CardView
            android:id="@+id/currentButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cardGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/courseButton"
            app:layout_constraintEnd_toStartOf="@+id/scheduleButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/currentTile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/scheduleButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cardGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toTopOf="@+id/profileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/currentButton">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/scheduleTile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/profileButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cardGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/courseButton"
            app:layout_constraintTop_toBottomOf="@id/scheduleButton">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/profileTile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/courseButton"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/cardGrey"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toStartOf="@+id/profileButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentButton"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/courseTile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
